--- a/Feedbacksystem/templates/pages/editsection.html
+++ b/Feedbacksystem/templates/pages/editsection.html
@@ -10,11 +10,27 @@
 {% endblock header %}
 <hr>
 {% block feature %}
+<div class="container" style="width: 60%;">
 <form method="POST" action="">
     {% csrf_token %}
-    {{ form.as_p }}
+    <div class="form-group">
+        {{ form.name.label_tag }}
+        {{ form.name }}
+        </div>
+
+    <div class="form-group">
+        {{ form.subjects.label_tag }}
+        <div class="checkbox-list">
+            {% for subject in form.subjects %}
+                <div class="form-check">
+                {{ subject }}
+                </div>
+            {% endfor %}
+        </div>
+    </div>
 
 
-<input type = "submit" value="Save changes">
+<input type = "submit" value="Save changes" class="btn btn-warning">
 </form>
+</div>
 {% endblock feature %}
