--- a/Feedbacksystem/templates/pages/editstudent.html
+++ b/Feedbacksystem/templates/pages/editstudent.html
@@ -10,11 +10,13 @@
 {% endblock header %}
 <hr>
 {% block feature %}
+<div class="container" style="width: 60%;">
 <form method="POST" action=""  enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
 
 
-<input type = "submit" value="Save changes" enctype="multipart/form-data">
+<input type = "submit" value="Save changes" enctype="multipart/form-data" class="btn btn-warning">
 </form>
+</div>
 {% endblock feature %}
