--- a/Feedbacksystem/templates/pages/evaluations.html
+++ b/Feedbacksystem/templates/pages/evaluations.html
@@ -3,30 +3,112 @@
 {% block title %}Evaluations{% endblock %}
 
 {% block header %}
-
+  <div class="d-flex">
     <h2> Faculty Evaluations </h2>
-    <hr>
-   
+    <h2 style="margin-left: 10rem;"> Total Responses: {{ total_evaluations }}</h2> 
+
+</div>
+<br>
 {% endblock header %}
-<hr>
+
 {% block feature %}
-<form method="get" action="">
-    <h4> Total Responses: {{ total_evaluations }}</h4> 
-    {{faculty_evaluation_filter.form}}
-    <button class="btn btn-warning" type="submit" style="margin-left: 1em; font-weight: bold;">Search</button>
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+  <div class="modal-content">
+  <div class="modal-header">
+    <h1 class="modal-title fs-5" id="exampleModalLabel">Edit Evaluation Status</h1>
+    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+  </div>
+  <div class="modal-body">
+    <form method="get" action="">
+      
+      {{faculty_evaluation_filter.form.section_subject_faculty.label_tag}}
+      {{faculty_evaluation_filter.form.section_subject_faculty}}
+      {{faculty_evaluation_filter.form.predicted_sentiment.label_tag}}
+      {{faculty_evaluation_filter.form.predicted_sentiment}}
+      {{faculty_evaluation_filter.form.academic_year.label_tag}}
+      {{faculty_evaluation_filter.form.academic_year}}
+      {{faculty_evaluation_filter.form.semester.label_tag}}
+      {{faculty_evaluation_filter.form.semester}}
+      <button type="button" class="btn btn-secondary" onclick="clearFilters()" style="margin-top: 1em;">Clear All</button>
+  </div>
+<div class="modal-footer">
+<button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+<input type = "submit" value="Save Changes" class="btn btn-success">
 </form>
+</div>
+</div>
+</div>
+</div>
+<!-- For making sorting functionality -->
+<div class=" d-flex" style="gap: 1em;">
+<button type="button" class="btn btn-warning"  style = "color: black; text-decoration: none; margin-left: 0.5em;"data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="bi bi-pencil-square"></i>
+  <b>Filter Options</b>
+</button>
+<select class="form-select" name="sort" id="sort-list" onchange="location = finalurl();" style="width: auto;">
+  <option value="" id="placeholder" disabled selected hidden>Sort</option>
+  <option id="average_rating" value="average_rating">Average Rating: Ascending</option>
+  <option id="-average_rating" value="-average_rating">Average Rating: Descending</option>
+  <option id="created" value="created">Date Submitted: Ascending</option>
+  <option id="-created" value="-created">Date Submitted: Descending</option>
 
+</select>
 
+<form method="get" action="">
+<div class="d-flex" style="gap: 1em;">
+{{faculty_evaluation_filter.form.comments.label_tag}}
+{{faculty_evaluation_filter.form.comments}}
+<input type = "submit" value="Search" class="btn btn-warning"> 
+
+</form>
+</div>
+</div>
+<script>
+  // for getting the sorting status to be displayed in sorting dropdown placeholder
+  function get(name) {
+   if (name = (new RegExp('[?&]' + encodeURIComponent(name) + '=([^&]*)')).exec(location.search))  //location.search give query sling part
+     return decodeURIComponent(name[1]);
+ }
+ if(get('ordering'))
+ document.getElementById('placeholder').innerHTML = "Sort: " + document.getElementById(get('ordering')).innerHTML;
+
+  // for getting url after applying ordering
+ function finalurl() {
+   var url = new URL(window.location.href);
+   var search_params = url.searchParams;
+   search_params.set('ordering', document.getElementById("sort-list").value);
+   url.search = search_params.toString();
+   var new_url = url.toString();
+   return new_url
+ }
+ function clearFilters() {
+    // Get all filter inputs within the form
+    var filterInputs = document.querySelectorAll('#exampleModal form select, #exampleModal form input[type="text"]');
+    
+    // Loop through each input and clear its value
+    filterInputs.forEach(function(input) {
+      if (input.tagName === 'SELECT') {
+        // For select elements, set the selected index to the default (first) option
+        input.selectedIndex = 0;
+      } else {
+        // For text inputs, clear the value
+        input.value = '';
+      }
+    });
+  }
+
+</script>
 <table class="table table-striped table-bordered table-responsive  " style="margin-top: 1em;">
     <tr>
-        <th  scope="col" class="bg-success">SUBJECT</th>
-        <th  scope="col" class="bg-success">FACULTY</th>
-        <th  scope="col" class="bg-success">AVERAGE RATING </th>
-        <th  scope="col" class="bg-success">OVERALL IMPRESSION </th>
-        <th  scope="col" class="bg-success">POLARITY </th>
-        <th  scope="col" class="bg-success">ACADEMIC YEAR </th>
-        <th  scope="col" class="bg-success">SEMESTER </th>
-        <th  scope="col" class="bg-success">OPTIONS </th>
+        <th  scope="col" style="color:#fafafa;  background: #2a9134">SUBJECT</th>
+        <th  scope="col" style="color:#fafafa; background: #2a9134">FACULTY</th>
+        <th  scope="col" style="color:#fafafa; background: #2a9134">AVERAGE RATING </th>
+        <th  scope="col" style="color:#fafafa; background: #2a9134">OVERALL IMPRESSION </th>
+        <th  scope="col" style="color:#fafafa; background: #2a9134">POLARITY </th>
+        <th  scope="col" style="color:#fafafa; background: #2a9134">ACADEMIC YEAR </th>
+        <th  scope="col" style="color:#fafafa; background: #2a9134">SEMESTER </th>
+        <th  scope="col" style="color:#fafafa; background: #2a9134">OPTIONS </th>
     </tr>
     {% for i in evaluation %}
     <tr>
@@ -37,11 +119,41 @@
         <td>{{ i.predicted_sentiment }}</td>
         <td>{{ i.academic_year }}</td>
         <td>{{ i.semester }}</td>
-        <td><a class="nav-link" href="{% url 'view_evaluation_form' i.pk %}"><b>VIEW</b><a class="nav-link" href="{% url 'deleteEvaluation'  i.pk  %}"><b>DELETE</b></a></td>
+        <td>
+            
+            <a class="nav-link" href="{% url 'view_evaluation_form' i.pk %}"><button class="btn btn-primary" style=" padding:3px 5px 3px 5px"><i class="bi bi-eye-fill" style="font-size:20px"></i></button>
+            <a class="nav-link" href="{% url 'deleteEvaluation'  i.pk  %}"><button class="btn btn-danger" style=" padding:3px 5px 3px 5px; margin-top: 1em;" ><i style="font-size:20px" class='bx bxs-trash' ></i></button></a></td>
 
     </tr>
-
     {% endfor %}
-
 </table>
+    {% if is_paginated %}
+    <nav class = "pagination" aria-label="...">
+        <ul class="pagination">
+            {% if page_obj.has_previous %}
+          <li class="page-item ">
+            <a class="page-link" tabindex= "-1" aria-disabled = "true" href ="?page={{ page_obj.previous_page_number }}{% if ordering %}&ordering={{ ordering }}{% endif %}">Previous</a>
+          </li>
+            {% endif %}
+            {% for i in paginator.page_range%}
+            {% if i == page_obj.number%}
+         
+          <li class="page-item active" aria-current="page">
+            <a class="page-link" href="?page={{i}}{% if ordering %}&ordering={{ ordering }}{% endif %}">{{i}}</a>
+          </li>
+          {% else %}
+          <li class="page-item"><a class="page-link"  href="?page={{i}}{% if ordering %}&ordering={{ ordering }}{% endif %}">{{i}}</a></li>
+          {% endif %}
+          {% endfor %}
+          {% if page_obj.has_next %}
+          <li class="page-item">
+            <a class="page-link" tabindex= "-1" href ="?page={{ page_obj.next_page_number }}{% if ordering %}&ordering={{ ordering }}{% endif %}">Next</a>
+          </li>
+          {% endif %}
+        </ul>
+      </nav>
+
+    {% endif %}
+ 
 {% endblock feature %}
+
