proposal defense final

--- a/Feedbacksystem/templates/pages/courses.html
+++ b/Feedbacksystem/templates/pages/courses.html
@@ -15,9 +15,9 @@
 <br>
 <table class="table table-hover table-striped table-bordered table-responsive  ">
     <tr>
-        <th  scope="col" class="bg-success">COURSE </th>
+        <th  scope="col" style="color:#fafafa; background: #2a9134"">COURSE </th>
      
-        <th  scope="col" class="bg-success">OPTIONS </th>
+        <th  scope="col" style="color:#fafafa; background: #2a9134"">OPTIONS </th>
     </tr>
     {% for i in course %}
     <tr>
