--- a/Feedbacksystem/templates/pages/edit_form.html
+++ b/Feedbacksystem/templates/pages/edit_form.html
@@ -13,8 +13,8 @@
 
 <table class="table table-responsive " >
     <tr>
-        <th scope="col" class="bg-success">QUESTION </th>
-        <th  scope="col" class="bg-success">OPTIONS </th>
+        <th scope="col"style="color:#fafafa; background: #2a9134">QUESTION </th>
+        <th  scope="col"style="color:#fafafa; background: #2a9134">OPTIONS </th>
  {% for i in questions %}
     <tr>
     <td>{{i.text}}</td>
