--- a/Feedbacksystem/templates/pages/facultyevaluations.html
+++ b/Feedbacksystem/templates/pages/facultyevaluations.html
@@ -11,7 +11,7 @@
 <hr>
 {% block feature %}
 {% if avg_rating %}
-  <p><strong>Average Rating: {{ avg_rating|floatformat:1 }} </strong></p>
+  <p><strong>Total Average Rating: {{ avg_rating|floatformat:1 }} </strong></p>
 {% endif %}
 <table class="table table-striped table-bordered table-responsive  ">
     <tr>
