--- a/Feedbacksystem/templates/pages/facultyfeedbackandevaluations.html
+++ b/Feedbacksystem/templates/pages/facultyfeedbackandevaluations.html
@@ -11,18 +11,18 @@
 <hr>
 {% block feature %}
 {% if avg_rating %}
-  <p><strong>Average Rating: {{ avg_rating|floatformat:1 }} </strong></p>
+  <p><strong>Total Average Rating: {{ avg_rating|floatformat:1 }} </strong></p>
 {% endif %}
 <table class="table table-striped table-bordered table-responsive  ">
     <tr>
-        <th  scope="col" class="bg-success">SUBJECT</th>
-        <th  scope="col" class="bg-success">FACULTY</th>
-        <th  scope="col" class="bg-success">AVERAGE RATING </th>
-        <th  scope="col" class="bg-success">OVERALL IMPRESSION </th>
-        <th  scope="col" class="bg-success">POLARITY </th>
-        <th  scope="col" class="bg-success">ACADEMIC YEAR </th>
-        <th  scope="col" class="bg-success">SEMESTER </th>
-        <th  scope="col" class="bg-success">OPTIONS </th>
+        <th  scope="col" style="color:#fafafa;  background: #2a9134">SUBJECT</th>
+        <th  scope="col" style="color:#fafafa;  background: #2a9134">FACULTY</th>
+        <th  scope="col" style="color:#fafafa;  background: #2a9134">AVERAGE RATING </th>
+        <th  scope="col" style="color:#fafafa;  background: #2a9134">OVERALL IMPRESSION </th>
+        <th  scope="col" style="color:#fafafa;  background: #2a9134">POLARITY </th>
+        <th  scope="col" style="color:#fafafa;  background: #2a9134">ACADEMIC YEAR </th>
+        <th  scope="col" style="color:#fafafa;  background: #2a9134">SEMESTER </th>
+        <th  scope="col" style="color:#fafafa;  background: #2a9134">OPTIONS </th>
     </tr>
     {% for i in teacher_evaluations %}
     <tr>
@@ -33,7 +33,7 @@
         <td>{{ i.predicted_sentiment }}</td>
         <td>{{ i.academic_year }}</td>
         <td>{{ i.semester }}</td>
-        <td><a class="nav-link" href="{% url 'view_evaluation_form' i.pk %}"><b>VIEW</b><a class="nav-link" href="{% url 'deleteEvaluation'  i.pk  %}"><b>DELETE</b></a></td>
+        <td><a class="nav-link" href="{% url 'view_evaluation_form' i.pk %}"><button class="btn btn-primary" style=" padding:3px 5px 3px 5px"><i class="bi bi-eye-fill" style="font-size:20px"></i></button></td>
     </tr>
 
     {% endfor %}
