--- a/Feedbacksystem/templates/pages/school_event_form.html
+++ b/Feedbacksystem/templates/pages/school_event_form.html
@@ -13,8 +13,8 @@
         {% csrf_token %}
         <table class="table table-bordered table-responsive  " style="margin-top: 1em;">
             <tr>  
-                <th  scope="col" class="bg-success">I. OVERALL EVALUATION </th>
-                <th  scope="col" class="bg-success"><div style="display: flex; white-space: pre; width: 50%;"><div style="width: 5em;margin-left: 3em;">Outstanding </div>          <div style="width: 100%; margin-left: 4em;">Very Satisfactory</div>      <div style="width: 100%; margin-right: 3.5em; margin-left:3em;">Satisfactory</div> <div style="width: 100%; margin-right: 5em;">Unsatisfactory</div>        <div style="width: 100%; margin-right: 2em;">Poor</div> </th>      
+                <th  scope="col" style="color:#fafafa;  background: #2a9134">I. OVERALL EVALUATION </th>
+                <th  scope="col" style="color:#fafafa;  background: #2a9134"><div style="display: flex; white-space: pre; width: 50%;"><div style="width: 5em;margin-left: 3em;">Outstanding </div>          <div style="width: 100%; margin-left: 4em;">Very Satisfactory</div>      <div style="width: 100%; margin-right: 3.5em; margin-left:3em;">Satisfactory</div> <div style="width: 100%; margin-right: 5em;">Unsatisfactory</div>        <div style="width: 100%; margin-right: 2em;">Poor</div> </th>      
             </tr>
           
             <tr>
