--- a/Feedbacksystem/templates/pages/section_details.html
+++ b/Feedbacksystem/templates/pages/section_details.html
@@ -17,10 +17,10 @@
 <br>
     <table class="table table-hover table-striped table-bordered table-responsive  ">
         <tr>
-        <th  scope="col" class="bg-success">Subject</th>
-        <th  scope="col" class="bg-success">Subject Name</th>
-        <th  scope="col" class="bg-success">Teacher</th>
-        <th  scope="col" class="bg-success">Options</th>
+        <th  scope="col" style="color:#fafafa;  background: #2a9134">Subject</th>
+        <th  scope="col" style="color:#fafafa;  background: #2a9134">Subject Name</th>
+        <th  scope="col" style="color:#fafafa;  background: #2a9134">Teacher</th>
+        <th  scope="col" style="color:#fafafa;  background: #2a9134">Options</th>
     </tr>
     <tr>
         {% for i in subjects_faculty %}
