--- a/Feedbacksystem/templates/pages/sections.html
+++ b/Feedbacksystem/templates/pages/sections.html
@@ -15,8 +15,8 @@
 <br>
 <table class="table table-hover table-striped table-bordered table-responsive  ">
     <tr>
-        <th  scope="col" class="bg-success">SECTION </th>
-        <th  scope="col" class="bg-success">OPTIONS </th>
+        <th  scope="col" style="color:#fafafa; background: #2a9134">SECTION </th>
+        <th  scope="col" style="color:#fafafa; background: #2a9134">OPTIONS </th>
        
        
     </tr>
