--- a/Feedbacksystem/templates/pages/view_evaluation_form.html
+++ b/Feedbacksystem/templates/pages/view_evaluation_form.html
@@ -1,4 +1,4 @@
-{% extends "pages/admin.html" %}
+{% extends "pages/facultydashboard.html" %}
 
 {% block title %}{{ section.name }}Form Details{% endblock %}
 
