--- a/Feedbacksystem/templates/pages/admin.html
+++ b/Feedbacksystem/templates/pages/admin.html
@@ -11,7 +11,7 @@
   
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="icon" href="static/images/cvsulogo.png" type="image/png">
-  <link rel="stylesheet" href="{% static 'css/admin.css'%}">
+  <link rel="stylesheet" href="{% static 'css/adminpage.css'%}">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -25,7 +25,7 @@
             <img src="{% static 'images/cvsulogo.png'%}" alt="Cavite State Univeristy Logo" width="78px" height="78px" id="cvsulogo"> Feedback and Evaluation System 
             <div class="subtitle">Cavite State University - Bacoor Campus</div>
         </a>
-        <div style="margin-left: 30rem;">
+        <div style="margin-left: 43rem;">
           {% if faculty.profile_picture %}
           <img src="{{ faculty.profile_picture.url }}" alt="Profile Picture" width="60" style=" border-radius: 50%;">
           {% else %}
@@ -55,8 +55,7 @@
         </button>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="{% url 'evaluations' %}">Faculty Evaluations</a>
-            <a class="dropdown-item" href="{}">Events</a>
-            <a class="dropdown-item" href="{}">Virtual Suggestion Box</a>
+            <a class="dropdown-item" href="{% url 'admin_event_evaluations' %}">Events</a>
           </div>
         </li>
         <li class="nav-item">
@@ -152,7 +151,7 @@
     {% block feature %}
     <br>
     <br>
-    <div class="d-flex" style="gap: 5em;  width: 100%; height: 50vh;">
+    <div class="d-flex" style="gap: 5em;  width: 100%; height: 60vh;">
       <div id="chart-container">
       <h4>Sentiment Analysis of Faculty Members</h4>
       <canvas id="myChart"></canvas>
@@ -180,7 +179,7 @@
       const ctx = document.getElementById('myChart');
     
       new Chart(ctx, {
-        type: 'pie',
+        type: 'bar',
         data: {
           labels: chartData.labels,
           datasets: [{
