--- a/Feedbacksystem/templates/pages/adminlogin.html
+++ b/Feedbacksystem/templates/pages/adminlogin.html
@@ -11,7 +11,7 @@
   
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="icon" href="static/images/cvsulogo.png" type="image/png">
-  <link rel="stylesheet" href="{% static 'css/loginpage.css'%}">
+  <link rel="stylesheet" href="{% static 'css/login.css'%}">
   <style>
     input[type="submit"] {
       background-color: #f7b205; 
@@ -39,7 +39,7 @@
     <input class="admininput" type = "text" name="username" placeholder="Enter Admin Username">
     <label id ="admin">Admin Password:</label>
     <input class="admininput" type = "password" name="password" placeholder="Enter Admin Password">
-<input  type = "submit" value="Submit"> 
+<input  type = "submit" value="Submit" style="font-weight: bold;"> 
 
 </form>
 </div>
