--- a/Feedbacksystem/templates/pages/departments.html
+++ b/Feedbacksystem/templates/pages/departments.html
@@ -15,9 +15,9 @@
 <br>
 <table class="table table-striped table-bordered table-responsive " >
     <tr>
-        <th  scope="col" class="bg-success">DEPARTMENT </th>
+        <th  scope="col" style="color:#fafafa; background: #2a9134">DEPARTMENT </th>
      
-        <th  scope="col" class="bg-success">OPTIONS </th>
+        <th  scope="col" style="color:#fafafa; background: #2a9134">OPTIONS </th>
     </tr>
     {% for i in department %}
     <tr>
