--- a/Feedbacksystem/templates/pages/faculty.html
+++ b/Feedbacksystem/templates/pages/faculty.html
@@ -1,3 +1,4 @@
+
 {% extends "pages/admin.html" %}
 
 {% block title %}Faculty{% endblock %}
@@ -15,13 +16,13 @@
 <br>
 <table class="table table-striped table-bordered table-responsive  ">
     <tr>
-        <th scope="col" class="bg-success">FIRST NAME </th>
-        <th  scope="col" class="bg-success">LAST NAME </th>
-        <th  scope="col" class="bg-success">GENDER </th>
-        <th  scope="col" class="bg-success">EMAIL </th>
-        <th  scope="col" class="bg-success">CONTACT NUMBER </th>
-        <th  scope="col" class="bg-success">DEPARTMENT </th>
-        <th  scope="col" class="bg-success">OPTIONS </th>
+        <th scope="col" style="color:#fafafa;  background: #2a9134">FIRST NAME </th>
+        <th  scope="col" style="color:#fafafa;  background: #2a9134">LAST NAME </th>
+        <th  scope="col" style="color:#fafafa;  background: #2a9134">GENDER </th>
+        <th  scope="col" style="color:#fafafa;  background: #2a9134">EMAIL </th>
+        <th  scope="col" style="color:#fafafa;  background: #2a9134">CONTACT NUMBER </th>
+        <th  scope="col" style="color:#fafafa;  background: #2a9134">DEPARTMENT </th>
+        <th  scope="col" style="color:#fafafa;  background: #2a9134">OPTIONS </th>
     </tr>
     {% for i in faculty %}
     <tr>
@@ -31,8 +32,8 @@
         <td>{{ i.email }}</td>
         <td>{{ i.contact_number }}</td>
         <td>{{ i.department }}</td>
-        <td style="display: flex; flex-direction: row; gap:1em"> <a class="nav-link" href="{% url 'facultyevaluations' i.pk %}"><b>VIEW</b></a><a class="nav-link" href="{% url 'editteacher'  i.pk  %}"><b>EDIT</b></a>
-          <a class="nav-link" href="{% url 'deleteTeacher'  i.pk  %}"><b>DELETE</b></a>
+        <td style="display: flex; flex-direction: row; gap:1em"> <a class="nav-link" href="{% url 'facultyevaluations' i.pk %}"><button class="btn btn-primary" style=" padding:3px 5px 3px 5px"><i class="bi bi-eye-fill" style="font-size:20px"></i> </button></a> <a class="nav-link" href="{% url 'editteacher'  i.pk  %}"><button class="btn btn-warning" style=" padding:3px 5px 3px 5px"><i class="bi bi-pencil-square" style="font-size:20px"></i></button></a>
+          <a class="nav-link" href="{% url 'deleteTeacher'  i.pk  %}"><button class="btn btn-danger" ><i style="font-size:20px" class='bx bxs-trash' ></i></button></a>
         </td>
     </tr>
 
