--- a/Feedbacksystem/templates/pages/facultylogin.html
+++ b/Feedbacksystem/templates/pages/facultylogin.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="icon" href="static/images/cvsulogo.png" type="image/png">
-    <link rel="stylesheet" href="{%static 'css/loginpage.css' %}">
+    <link rel="stylesheet" href="{%static 'css/login.css' %}">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
  
     <title>Feedback and Evaluation System - CvSU Bacoor Campus</title>
@@ -31,7 +31,7 @@
                 {% csrf_token %}
                 {{ registration_form.as_p }}
                 
-                <button onclick="showAlert()" type = "Submit" name="register">Register</button>
+                <button onclick="showAlert()" type = "Submit" name="register"><b>Register</b></button>
           
             </form>
         </div>
@@ -44,15 +44,15 @@
                 {% csrf_token %}
                 {{ login_form.as_p }}
                 <a id="resetpw" href="#">Forgot Your Password?</a>
-                <button type = "Submit" name = "signin">Sign In</button>
+                <button type = "Submit" name = "signin"><b>Sign In</b></button>
                 <div class="dropdown">
                     <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
                       Sign in as
                     </a>
                   
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                      <li><a class="dropdown-item" href="{% url 'signin' %}">Student</a></li>
-                      <li><a class="dropdown-item" href="{% url 'adminlogin' %}">Admin</a></li>
+                      <li><a class="dropdown-item" href="{% url 'signin' %}" style="color: black;">Student</a></li>
+                      <li><a class="dropdown-item" href="{% url 'adminlogin' %} " style="color: black;">Admin</a></li>
                     </ul>
                   </div>
             </form>
