--- a/Feedbacksystem/templates/pages/home.html
+++ b/Feedbacksystem/templates/pages/home.html
@@ -22,10 +22,10 @@
   <div class="container-fluid" style="padding: 0;">
     <div style="display: flex; align-items: center; background-color: #2a9134; margin: 0; width: 100%; height: 20vh;">
         <a class="navbar-brand" style="color: #fafafa;" href="{% url 'home' %}" id="headerlogo">
-            <img src="{% static 'images/cvsulogo.png'%}" alt="Cavite State Univeristy Logo" width="64px" height="64px" id="cvsulogo"> Feedback and Evaluation System 
+            <img src="{% static 'images/cvsulogo.png'%}" alt="Cavite State Univeristy Logo" width="80px" height="80px" id="cvsulogo"> Feedback and Evaluation System 
             <div class="subtitle">Cavite State University - Bacoor Campus</div>
         </a>
-        <div style="margin-left: 30rem;">
+        <div style="margin-left: 43em;">
           {% if student.profile_picture %}
           <img src="{{ student.profile_picture.url }}" alt="Profile Picture" width="60" style=" border-radius: 50%;">
           {% else %}
@@ -43,7 +43,7 @@
       <ul class="nav flex-column nav-pills">
         <li class="nav-item">
           <a class="nav-link {% if request.path == '/home' %} active {% endif %}" href="/home">
-          <i class="bi bi-grid-1x2-fill"></i> <b>DASHBOARD</b>    
+            <i class="bi bi-house-fill"></i> <b>HOME</b>    
         
         
         </a>
@@ -61,7 +61,6 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{% url 'facultyeval' %}">Faculty</a>
               <a class="dropdown-item" href="{% url 'eventhub' %}">Events</a>
-              <a class="dropdown-item" href="{% url 'suggestionbox' %}">Virtual Suggestion Box</a>
       </li>
         <li class="nav-item">
           <a class="nav-link {% if request.path == '/about' %} active {% endif %}" href="{% url 'about' %}">
@@ -86,12 +85,10 @@
     
     <div class="container" style="padding:10px; margin-top:10px;">
       {% block header %}
-    <h2> Student Dashboard</h2>
-    <hr>
     <div id="eval" class = "container">
       <h3>Academic Year: {{ evaluation_status.academic_year }}</h3>
       <h4>Semester: {{ evaluation_status.semester }}</h4>
-      <h4>Student Evaluation for Teachers: {% if evaluation_status.evaluation_status %} Ongoing {% else %} Concluded {% endif %} </h4>
+      <h4>Student Evaluation for Teachers: {% if evaluation_status.evaluation_status %} In Progress {% else %} Concluded {% endif %} </h4>
      </div>
     {% endblock header %}
    
