--- a/Feedbacksystem/templates/pages/subjects.html
+++ b/Feedbacksystem/templates/pages/subjects.html
@@ -15,9 +15,9 @@
 <br>
 <table class="table table-hover table-striped table-bordered table-responsive  ">
     <tr>
-        <th  scope="col" class="bg-success">SUBJECT CODE </th>
-        <th  scope="col" class="bg-success">SUBJECT NAME </th>
-        <th  scope="col" class="bg-success">OPTIONS </th>
+        <th  scope="col"style="color:#fafafa; background: #2a9134">SUBJECT CODE </th>
+        <th  scope="col"style="color:#fafafa; background: #2a9134">SUBJECT NAME </th>
+        <th  scope="col"style="color:#fafafa; background: #2a9134">OPTIONS </th>
        
        
     </tr>
