--- a/Feedbacksystem/templates/pages/users.html
+++ b/Feedbacksystem/templates/pages/users.html
@@ -25,7 +25,7 @@
         {% endfor %}
         <td>
             <div class="d-flex" style="gap: 1em; align-items: center; margin: auto;">
-            <a class="nav-link" href="{% url 'edit_user_group' user_id %}"><button class="btn btn-primary" style=" padding:3px 5px 3px 5px"><i class="bi bi-eye-fill" style="font-size:20px"></i></button>
+            <a class="nav-link" href="{% url 'edit_user_group' user_id %}"><button class="btn btn-primary" style=" padding:3px 5px 3px 5px"><i class="bi bi-pencil-square" style="font-size:20px"></i></button>
             <a class="nav-link" href="{}"><button class="btn btn-danger" style=" padding:3px 5px 3px 5px;" ><i style="font-size:23px" class='bx bxs-trash' ></i></button></a></td>
             </div>
     </tr>
