--- a/Feedbacksystem/templates/pages/view_department.html
+++ b/Feedbacksystem/templates/pages/view_department.html
@@ -16,11 +16,11 @@
     <table class="table table-striped table-responsive table-bordered">
 
             <tr>
-                <th scope="col" class="bg-success">FACULTY</th>
-                <th  scope="col" class="bg-success">GENDER </th>
-                <th  scope="col" class="bg-success">EMAIL </th>
-                <th  scope="col" class="bg-success">CONTACT NUMBER </th>
-                <th  scope="col" class="bg-success">OPTIONS </th>
+                <th scope="col" style="color:#fafafa; background: #2a9134">FACULTY</th>
+                <th  scope="col" style="color:#fafafa; background: #2a9134">GENDER </th>
+                <th  scope="col" style="color:#fafafa; background: #2a9134">EMAIL </th>
+                <th  scope="col" style="color:#fafafa; background: #2a9134">CONTACT NUMBER </th>
+                <th  scope="col" style="color:#fafafa; background: #2a9134">OPTIONS </th>
             </tr>
 
     </thead>
